kubernetes/ingress/alb-private-ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-7369383a, subnet-59c0dd1f
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:354285753755:certificate/44e11307-55f4-4365-a0fe-0c408af4f7fa
  labels:
    app: python-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: python-service
              servicePort: 5000
